# c-for-all

./: .gitignore  LICENSE  Makefile.am  README.md  TODO  configure.ac
config/: .gitignore  COPYING  COPYING.EXCEPTION
include/: libforall.h
src/: libcforall.c  libcforall_test.c  libforall.c
src/include/: libcforall.h
src/swig/: cforall.i
src/test/java/: JavaToC.java  run_test.sh  y
