AC_INIT([libforall], [1.0], [ajfabbri@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_PROG_RANLIB

# SWIG
#AX_PKG_SWIG(2.0.1, [], [ AC_MSG_ERROR([SWIG is required.]) ])
#AX_SWIG_ENABLE_CXX
#AX_SWIG_MULTI_MODULE_SUPPORT
#AX_SWIG_PYTHON

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
